--- a/index.html
+++ b/index.html
@@ -19,7 +19,26 @@
 <li>CAMERA</li>
 <li>LAPTOP</li>
 </ol>
-<dl><dt>MOBILE</dt><dd>VIVO OPPO</dd>
+<dl>
+	<dt>MOBILE</dt>
+	<dd>B</dd>
+	<dd>A</dd>
 </dl>
 </body>
 	</html>
+	git init
+	<table style="border: 5px solid black">
+		<th>
+			<td>Name</td>
+			<td>Email</td>
+			<td>Name</td>
+	
+		</th>
+		<tr>
+			<td>Amrit Mishra</td>
+			<td>amritmishra035@gmail.com</td>
+			<td>9120596609</td>
+
+		</tr>
+	</table>
+	
