--- a/index2.html
+++ b/index2.html
@@ -1,11 +1,29 @@
 <!doctype html>
 	<html>
 	<head>
-		<title>Second Website
-		</title>
+		<title>Second Website</title>
 		</head>
-		<body style="background-color:skyblue">
-			<h1> Twitter</h1>
-			<p>My name is Amrit Mishra</p>
+		<body>
+			<h1>Using multimedia Tags</h1>
+			<video style="height: 200px;width: 200px" controls>
+				<source src="abc.mp4" type="video/mp4"
+			</video>
 		</body>
 	</html>
+	<table>
+		<th>
+			<td>Name</td>
+			<td>Email</td>
+			<td>Name</td>
+	
+		</th>
+		<tr>
+			<td>Amrit Mishra</td>
+			<td>amritmishra035@gmail.com</td>
+			<td>9120596609</td>
+
+		</tr>
+
+
+
+	</table>
