--- a/whatsapp.html.html
+++ b/whatsapp.html.html
@@ -5,13 +5,45 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Whatsapp</title>
 	<link rel="icon" type = "image/x-icon"> 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" >
+
+	<style>
+		:root{
+			font-size:  15px;
+			--primaryColor: #075E54;
+			--secondaryColor: #AAA9A8;
+			--tertierColor: #25D366;
+		}
+		*{
+			Margin: 0;
+			Padding: 0;
+			font-family: Helvetica;
+			font-size: inherit;
+		}
+		header{
+			background-color: var(--primaryColor);
+			padding: 1.4em 0;
+		}
+		header.container{
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			color: white;
+
+		}
+
+		
+
+	</style>
+
+
+
 </head>
 <body>
 	<header>
 		<div>
 			<h1>Whatsapp</h1>
-			<div>
+			<div class="container">
 				<a role="button" class= "bi bi-search icon"></a>
 				<a role="button" class= "bi bi-three-dots-vertical"></a>
 			</div>
@@ -30,13 +62,13 @@
 			</div>
 			<div>
 			<h2>Amrit</h2>
-			<p>Hii, My name is Amrit.</p>
+			<p>Hii, My name is Amrit .</p>
 		    </div>
 		    <small>
                10:55am
 		    </small>
 	    </div>
-
+	    <button type="button class=" bi bi-chat></button>
 	</section>	
 </body>
 </html>
